Updated the MSVC project files of the kyra engine (added sound_lol.cpp)
svn-id: r40881

--- a/dists/msvc8/kyra.vcproj
+++ b/dists/msvc8/kyra.vcproj
@@ -511,6 +511,10 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\engines\kyra\sound_lol.cpp"
+			>
+		</File>
+		<File
 			RelativePath="..\..\engines\kyra\sound_midi.cpp"
 			>
 		</File>
