--- a/dists/msvc7/kyra.vcproj
+++ b/dists/msvc7/kyra.vcproj
@@ -362,6 +362,9 @@
 			RelativePath="..\..\engines\kyra\sound_lok.cpp">
 		</File>
 		<File
+			RelativePath="..\..\engines\kyra\sound_lol.cpp">
+		</File>
+		<File
 			RelativePath="..\..\engines\kyra\sound_midi.cpp">
 		</File>
 		<File
