--- a/dists/msvc9/kyra.vcproj
+++ b/dists/msvc9/kyra.vcproj
@@ -512,6 +512,10 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\engines\kyra\sound_lol.cpp"
+			>
+		</File>
+		<File
 			RelativePath="..\..\engines\kyra\sound_midi.cpp"
 			>
 		</File>
