Updated the MSVC project files of the SCI engine
svn-id: r40918

--- a/dists/msvc71/sci.vcproj
+++ b/dists/msvc71/sci.vcproj
@@ -396,33 +396,6 @@
 				RelativePath="..\..\engines\sci\sfx\songlib.h">
 			</File>
 			<Filter
-				Name="device">
-				<File
-					RelativePath="..\..\engines\sci\sfx\device\devices.cpp">
-				</File>
-			</Filter>
-			<Filter
-				Name="player">
-				<File
-					RelativePath="..\..\engines\sci\sfx\player\player.cpp">
-				</File>
-				<File
-					RelativePath="..\..\engines\sci\sfx\player\players.cpp">
-				</File>
-				<File
-					RelativePath="..\..\engines\sci\sfx\player\polled.cpp">
-				</File>
-				<File
-					RelativePath="..\..\engines\sci\sfx\player\realtime.cpp">
-				</File>
-			</Filter>
-			<Filter
-				Name="seq">
-				<File
-					RelativePath="..\..\engines\sci\sfx\seq\sequencers.cpp">
-				</File>
-			</Filter>
-			<Filter
 				Name="softseq">
 				<File
 					RelativePath="..\..\engines\sci\sfx\softseq\adlib.cpp">
@@ -434,22 +407,25 @@
 					RelativePath="..\..\engines\sci\sfx\softseq\amiga.cpp">
 				</File>
 				<File
-					RelativePath="..\..\engines\sci\sfx\softseq\opl2.cpp">
-				</File>
-				<File
 					RelativePath="..\..\engines\sci\sfx\softseq\pcjr.cpp">
 				</File>
 				<File
 					RelativePath="..\..\engines\sci\sfx\softseq\pcjr.h">
 				</File>
+			</Filter>
+			<Filter
+				Name="player">
 				<File
-					RelativePath="..\..\engines\sci\sfx\softseq\pcspeaker.cpp">
+					RelativePath="..\..\engines\sci\sfx\player\new_player.cpp">
 				</File>
 				<File
-					RelativePath="..\..\engines\sci\sfx\softseq\SN76496.cpp">
+					RelativePath="..\..\engines\sci\sfx\player\new_player.h">
 				</File>
+			</Filter>
+			<Filter
+				Name="seq">
 				<File
-					RelativePath="..\..\engines\sci\sfx\softseq\softsequencers.cpp">
+					RelativePath="..\..\engines\sci\sfx\seq\sequencers.cpp">
 				</File>
 			</Filter>
 		</Filter>
@@ -497,9 +473,6 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\sci\uinput.h">
-		</File>
-		<File
-			RelativePath="..\..\engines\sci\vocab_debug.cpp">
 		</File>
 		<File
 			RelativePath="..\..\engines\sci\vocabulary.cpp">
