--- a/dists/msvc8/kyra.vcproj
+++ b/dists/msvc8/kyra.vcproj
@@ -507,6 +507,10 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\engines\kyra\sound_intern.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\engines\kyra\sound_lok.cpp"
 			>
 		</File>
@@ -516,6 +520,10 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\kyra\sound_midi.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\kyra\sound_pcspk.cpp"
 			>
 		</File>
 		<File
