--- a/dists/msvc71/kyra.vcproj
+++ b/dists/msvc71/kyra.vcproj
@@ -373,6 +373,9 @@
 			RelativePath="..\..\engines\kyra\sound_digital.cpp">
 		</File>
 		<File
+			RelativePath="..\..\engines\kyra\sound_intern.h">
+		</File>
+		<File
 			RelativePath="..\..\engines\kyra\sound_lok.cpp">
 		</File>
 		<File
@@ -380,6 +383,9 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\kyra\sound_midi.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\kyra\sound_pcspk.cpp">
 		</File>
 		<File
 			RelativePath="..\..\engines\kyra\sound_towns.cpp">
