--- a/dists/msvc9/sci.vcproj
+++ b/dists/msvc9/sci.vcproj
@@ -511,6 +511,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\sfx\misc.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\sfx\player.h"
 				>
 			</File>
@@ -559,18 +563,6 @@
 				</File>
 				<File
 					RelativePath="..\..\engines\sci\sfx\softseq\pcjr.h"
-					>
-				</File>
-			</Filter>
-			<Filter
-				Name="player"
-				>
-				<File
-					RelativePath="..\..\engines\sci\sfx\player\new_player.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\engines\sci\sfx\player\new_player.h"
 					>
 				</File>
 			</Filter>
