--- a/dists/msvc9/sci.vcproj
+++ b/dists/msvc9/sci.vcproj
@@ -459,11 +459,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\gfx\res_view0.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\gfx\res_view1.cpp"
+				RelativePath="..\..\engines\sci\gfx\res_view.cpp"
 				>
 			</File>
 			<File
@@ -478,14 +474,6 @@
 		<Filter
 			Name="sfx"
 			>
-			<File
-				RelativePath="..\..\engines\sci\sfx\adlib_sbi.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\sfx\adlib_sbi.h"
-				>
-			</File>
 			<File
 				RelativePath="..\..\engines\sci\sfx\core.cpp"
 				>
