--- a/dists/msvc71/sci.vcproj
+++ b/dists/msvc71/sci.vcproj
@@ -336,10 +336,7 @@
 				RelativePath="..\..\engines\sci\gfx\res_pic.cpp">
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\gfx\res_view0.cpp">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\gfx\res_view1.cpp">
+				RelativePath="..\..\engines\sci\gfx\res_view.cpp">
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\gfx\seq_decoder.cpp">
@@ -350,12 +347,6 @@
 		</Filter>
 		<Filter
 			Name="sfx">
-			<File
-				RelativePath="..\..\engines\sci\sfx\adlib_sbi.cpp">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\sfx\adlib_sbi.h">
-			</File>
 			<File
 				RelativePath="..\..\engines\sci\sfx\core.cpp">
 			</File>
