--- a/dists/msvc9/residual.vcproj
+++ b/dists/msvc9/residual.vcproj
@@ -536,11 +536,11 @@
 					>
 				</File>
 				<File
-					RelativePath="..\..\engines\grim\lua.cpp"
+					RelativePath="..\..\engines\grim\lua.h"
 					>
 				</File>
 				<File
-					RelativePath="..\..\engines\grim\lua.h"
+					RelativePath="..\..\engines\grim\lua_v1.cpp"
 					>
 				</File>
 				<File
