--- a/dists/msvc71/sci.vcproj
+++ b/dists/msvc71/sci.vcproj
@@ -183,6 +183,12 @@
 				RelativePath="..\..\engines\sci\engine\kstring.cpp">
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\engine\memobj.cpp">
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\engine\memobj.h">
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\engine\message.cpp">
 			</File>
 			<File
@@ -407,6 +413,9 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\sci\console.h">
+		</File>
+		<File
+			RelativePath="..\..\engines\sci\debug.h">
 		</File>
 		<File
 			RelativePath="..\..\engines\sci\decompressor.cpp">
