--- a/dists/msvc8/sci.vcproj
+++ b/dists/msvc8/sci.vcproj
@@ -254,6 +254,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\engine\memobj.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\engine\memobj.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\engine\message.cpp"
 				>
 			</File>
@@ -552,6 +560,10 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\sci\console.h"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\sci\debug.h"
 			>
 		</File>
 		<File
